Add footer with logo and version details
Added footer with logo and version information.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
       navigator.serviceWorker.register("service-worker.js");
     }
     </script>
+<footer class="footer">
+  <img src="icon-192.png" class="footer-logo" alt="logo">
+  <div class="footer-text">
+    <div>B.BARROIS</div>
+    <div id="version">version …</div>
+  </div>
+</footer>
   
 </body>
 </html>
+
