--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     <div id="version">version …</div>
   </div>
 </footer>
+<img src="./icon_4_chrono_2.png" class="footer-logo" alt="logo">
   
 </body>
 </html>
+
 
