Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     }
     </script>
 <footer class="footer">
-  <img src="icon-192.png" class="footer-logo" alt="logo">
+  <img src="icon_4_chrono_2.png" class="footer-logo" alt="logo">
   <div class="footer-text">
     <div>B.BARROIS</div>
     <div id="version">version …</div>
@@ -77,5 +77,6 @@
   
 </body>
 </html>
+
 
 
