Refactor HTML structure and add header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 <body>
 
-<h1>Chronos</h1>
+<header class="topbar">
+  <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
+
+  <div class="top-title">
+    Chronos
+  </div>
+
+  <div class="top-right">
+    <div>B.BARROIS</div>
+    <div id="version">version …</div>
+  </div>
+</header>
+
 
 <div class="ligne rouge">
   <div class="temps" id="t0">0 s</div>
@@ -66,16 +78,11 @@
       navigator.serviceWorker.register("service-worker.js");
     }
     </script>
-<footer class="footer">
-  <img src="./icon_4_chrono_2.png" class="footer-logo" alt="logo">
-  <div class="footer-text">
-    <div>B.BARROIS</div>
-    <div id="version">version …</div>
-  </div>
-</footer>
+
   
 </body>
 </html>
+
 
 
 
