--- a/index.html
+++ b/index.html
@@ -3,87 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chronos multiples</title>
-  <link rel="stylesheet" href="style.css">
+
+  <title>Chronos</title>
+
+  <!-- PWA -->
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Icône -->
+  <link rel="icon" href="./icon_4_chrono_2.png">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Version -->
+  <script src="version.js"></script>
 </head>
+
 <body>
 
-<header class="topbar">
-  <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
+  <!-- HEADER -->
+  <header class="topbar">
+    <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
 
-  <div class="top-title">
-    Chronos
-  </div>
+    <div class="top-title">
+      Chronos
+    </div>
 
-  <div class="top-right">
-    <div>B.BARROIS</div>
-    <div id="version">version …</div>
-  </div>
-</header>
+    <div class="top-right">
+      <div>B.BARROIS</div>
+      <div id="version">version …</div>
+    </div>
+  </header>
 
+  <!-- CONTENU PRINCIPAL -->
+  <main>
 
-<div class="ligne rouge">
-  <div class="temps" id="t0">0 s</div>
-  <button onclick="startStop(0)">START / STOP</button>
-  <button onclick="sup(0)">SUP</button>
-  <button onclick="rst(0)">RST</button>
-  <div class="stats">
-    Essais : <span id="n0">0</span> |
-    Moyenne : <span id="m0">0</span> s |
-    Dist : <span id="d0">0</span> m
-  </div>
-</div>
+    <!-- EXEMPLE D’UNE LIGNE DE CHRONO
+         (à répéter / adapter selon ton app.js) -->
 
-<div class="ligne bleue">
-  <div class="temps" id="t1">0 s</div>
-  <button onclick="startStop(1)">START / STOP</button>
-  <button onclick="sup(1)">SUP</button>
-  <button onclick="rst(1)">RST</button>
-  <div class="stats">
-    Essais : <span id="n1">0</span> |
-    Moyenne : <span id="m1">0</span> s |
-    Dist : <span id="d1">0</span> m
-  </div>
-</div>
+    <div class="chrono red">
+      <button class="start">Start / Stop</button>
+      <span class="time">0.00 s</span>
+      <span class="count">0 essai</span>
+      <span class="avg">moy: 0.00 s</span>
+      <span class="dist">dist: 0.0 m</span>
+      <button class="undo">SUO</button>
+      <button class="reset">RST</button>
+    </div>
 
-<div class="ligne verte">
-  <div class="temps" id="t2">0 s</div>
-  <button onclick="startStop(2)">START / STOP</button>
-  <button onclick="sup(2)">SUP</button>
-  <button onclick="rst(2)">RST</button>
-  <div class="stats">
-    Essais : <span id="n2">0</span> |
-    Moyenne : <span id="m2">0</span> s |
-    Dist : <span id="d2">0</span> m
-  </div>
-</div>
+    <!-- Les autres lignes (bleu, vert, blanc)
+         sont normalement générées ou gérées par app.js -->
 
-<div class="ligne blanche">
-  <div class="temps" id="t3">0 s</div>
-  <button onclick="startStop(3)">START / STOP</button>
-  <button onclick="sup(3)">SUP</button>
-  <button onclick="rst(3)">RST</button>
-  <div class="stats">
-    Essais : <span id="n3">0</span> |
-    Moyenne : <span id="m3">0</span> s |
-    Dist : <span id="d3">0</span> m
-  </div>
-</div>
+  </main>
 
-<script src="app.js"></script>
-<script>
+  <!-- FOOTER OPTIONNEL -->
+  <!-- (tu peux le supprimer si inutile) -->
+  <footer class="footer">
+  </footer>
+
+  <!-- SCRIPT PRINCIPAL -->
+  <script src="app.js"></script>
+
+  <!-- AFFICHAGE VERSION -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const v = document.getElementById("version");
+      if (v && typeof APP_VERSION !== "undefined") {
+        v.textContent = "version " + APP_VERSION;
+      }
+    });
+  </script>
+
+  <!-- SERVICE WORKER -->
+  <script>
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("service-worker.js");
     }
-    </script>
+  </script>
 
-  
 </body>
 </html>
-
-
-
-
-
