Refactor index.html to improve structure
Updated the structure of the index.html file to include a main container for chronos and removed example chronos line.

--- a/index.html
+++ b/index.html
@@ -36,31 +36,10 @@
     </div>
   </header>
 
-  <!-- CONTENU PRINCIPAL -->
-  <main>
-
-    <!-- EXEMPLE D’UNE LIGNE DE CHRONO
-         (à répéter / adapter selon ton app.js) -->
-
-    <div class="chrono red">
-      <button class="start">Start / Stop</button>
-      <span class="time">0.00 s</span>
-      <span class="count">0 essai</span>
-      <span class="avg">moy: 0.00 s</span>
-      <span class="dist">dist: 0.0 m</span>
-      <button class="undo">SUO</button>
-      <button class="reset">RST</button>
-    </div>
-
-    <!-- Les autres lignes (bleu, vert, blanc)
-         sont normalement générées ou gérées par app.js -->
-
+  <!-- CONTENEUR DES CHRONOS -->
+  <main id="chronos">
+    <!-- Les 4 chronos seront générés par app.js -->
   </main>
-
-  <!-- FOOTER OPTIONNEL -->
-  <!-- (tu peux le supprimer si inutile) -->
-  <footer class="footer">
-  </footer>
 
   <!-- SCRIPT PRINCIPAL -->
   <script src="app.js"></script>
