Refactor index.html for improved readability
Updated the HTML structure and comments for clarity.

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
     <div class="top-right">
       <div>B.BARROIS</div>
-      <div id="version">version …</div>
+      <div id="version">version </div>
     </div>
   </header>
 
   <!-- CONTENEUR DES CHRONOS -->
   <main id="chronos">
-    <!-- Les 4 chronos seront générés par app.js -->
+    <!-- Les chronos seront générés par app.js -->
   </main>
 
   <!-- SCRIPT PRINCIPAL -->
