Fix version display text in index.html
Updated version display text in the HTML.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     document.addEventListener("DOMContentLoaded", () => {
       const v = document.getElementById("version");
       if (v && typeof APP_VERSION !== "undefined") {
-        v.textContent = "version " + APP_VERSION;
+        v.textContent = "v. : " + APP_VERSION;
       }
     });
   </script>
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
