--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Chronos</title>
+  <title>Chronos v2</title>
 
   <!-- PWA -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Icône -->
   <link rel="icon" href="./icon_4_chrono_2.png">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- Version -->
   <script src="version.js"></script>
@@ -42,7 +42,7 @@
   </main>
 
   <!-- SCRIPT PRINCIPAL -->
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 
   <!-- AFFICHAGE VERSION -->
   <script>
@@ -57,10 +57,11 @@
   <!-- SERVICE WORKER -->
   <script>
     if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
+      navigator.serviceWorker.register("./service-worker.js");
     }
   </script>
 
 </body>
 </html>
+
 
