--- a/v3/index.html
+++ b/v3/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Chronos v2</title>
+  <title>Chronos v3</title>
 
   <!-- PWA -->
   <link rel="manifest" href="./manifest.json">
@@ -35,6 +35,10 @@
       <div id="version">version </div>
     </div>
   </header>
+  <div class="top-actions">
+    <button id="btnCapt" class="btn-capt">CAPT</button>
+    <button id="btnLoc" class="btn-loc">LOC</button>
+  </div>
 
   <!-- CONTENEUR DES CHRONOS -->
   <main id="chronos">
