--- a/v3/index.html
+++ b/v3/index.html
@@ -36,9 +36,10 @@
     </div>
   </header>
   <div class="top-actions">
-    <button id="btnCapt" class="btn-capt">CAPT</button>
-    <button id="btnLoc" class="btn-loc">LOC</button>
+    <button id="btnCapt" class="btn-capt">Capture d’écran</button>
+    <button id="btnLoc" class="btn-loc">Localisation du nid</button>
   </div>
+
 
   <!-- CONTENEUR DES CHRONOS -->
   <main id="chronos">
