--- a/v3/index.html
+++ b/v3/index.html
@@ -27,7 +27,7 @@
     <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
 
     <div class="top-title">
-      Chronos <span style="font-size:0.6em;color:#888">(v2 test)</span>
+      Chronos <span style="font-size:0.6em;color:#888">(v3)</span>
     </div>
 
     <div class="top-right">
@@ -35,6 +35,11 @@
       <div id="version">version </div>
     </div>
   </header>
+  <div class="top-actions">
+    <button id="btnCapt" class="btn-capt">Capture d’écran</button>
+    <button id="btnLoc" class="btn-loc">Localisation du nid</button>
+  </div>
+
 
   <!-- CONTENEUR DES CHRONOS -->
   <main id="chronos">
