--- a/v3/index.html
+++ b/v3/index.html
@@ -101,6 +101,11 @@
     a.click();
   });
   </script>
+  <script>
+  document.getElementById("btnLoc").addEventListener("click", () => {
+    window.location.href = "./map.html";
+  });
+</script>
 
 </body>
 </html>
