--- a/v3/index.html
+++ b/v3/index.html
@@ -106,6 +106,46 @@
     window.location.href = "./map.html";
   });
 </script>
+<script>
+  document.getElementById("btnLoc").addEventListener("click", () => {
+  
+    const observations = [];
+  
+    chronos.forEach(c => {
+      // Conditions minimales
+      if (c.lat === "--" || c.lon === "--") return;
+      if (c.essais.length === 0) return;
+  
+      // Calcul distance moyenne (même logique que l'affichage)
+      const total = c.essais.reduce((a, b) => a + b, 0);
+      const moyenne = total / c.essais.length;
+      const distance = Math.round((moyenne * c.vitesse) / 2);
+  
+      observations.push({
+        color: c.color,
+        lat: parseFloat(c.lat),
+        lon: parseFloat(c.lon),
+        direction: c.direction,
+        distance: distance,
+        vitesse: c.vitesse,
+        essais: c.essais.length,
+        timestamp: new Date().toISOString()
+      });
+    });
+  
+    if (observations.length === 0) {
+      alert("Aucune donnée exploitable pour la localisation.");
+      return;
+    }
+  
+    localStorage.setItem(
+      "chronoObservations",
+      JSON.stringify(observations)
+    );
+  
+    window.location.href = "./map.html";
+  });
+  </script>
 
 </body>
 </html>
