--- a/v4/index.html
+++ b/v4/index.html
@@ -25,16 +25,17 @@
   <!-- HEADER -->
   <header class="topbar">
     <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
-
+  
     <div class="top-title">
-      Chronos <span style="font-size:0.6em;color:#888">(v3)</span>
+      4 Chronos
     </div>
-
+  
     <div class="top-right">
-      <div>B.BARROIS</div>
-      <div id="version">version </div>
+      <div>B.Barrois</div>
+      <div id="version">version</div>
     </div>
   </header>
+
   <div class="top-actions">
     <button id="btnCapt" class="btn-capt">Capture d’écran</button>
     <button id="btnLoc" class="btn-loc">Localisation du nid</button>
