--- a/v4/index.html
+++ b/v4/index.html
@@ -27,7 +27,7 @@
     <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
   
     <div class="top-title">
-      4 Chronos
+      Pot à Mèche
     </div>
   
     <div class="top-right">
@@ -38,6 +38,7 @@
   
   <div class="top-actions">
     <button id="btnCapt" class="btn-capt">Capture d’écran</button>
+     <div id="dateTime" class="date-time">--/--/---- --:--</div>
     <button id="btnLoc" class="btn-loc">Localisation du nid</button>
   </div>
 
