--- a/v4/index.html
+++ b/v4/index.html
@@ -38,9 +38,12 @@
   
   <div class="top-actions">
     <button id="btnCapt" class="btn-capt">Capture d’écran</button>
-     <div id="dateTime" class="date-time">--/--/---- --:--</div>
+  
+    <div id="dateTime" class="date-time"></div>
+  
     <button id="btnLoc" class="btn-loc">Localisation du nid</button>
   </div>
+
 
 
 
