--- a/v4/index.html
+++ b/v4/index.html
@@ -23,18 +23,22 @@
 <body>
 
   <!-- HEADER -->
-  <header class="topbar">
+<header class="topbar">
+  <div class="top-left">
     <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
+    <button id="btnHelp" class="btn-help">Aide</button>
+  </div>
 
-    <div class="top-title">
-      Pot à Mèche
-    </div>
+  <div class="top-title">
+    Pot à Mèche
+  </div>
 
-    <div class="top-right">
-      <div>B.Barrois</div>
-      <div id="version">version</div>
-    </div>
-  </header>
+  <div class="top-right">
+    <div>B.Barrois</div>
+    <div id="version">version</div>
+  </div>
+</header>
+
 
   <!-- ACTIONS HAUT DE PAGE -->
   <div class="top-actions">
