--- a/v4/index.html
+++ b/v4/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>4 Chronos</title>
+  <title>4 Chronos pour Pot à Mèche</title>
 
   <!-- PWA -->
   <link rel="manifest" href="./manifest.json">
