--- a/v4/index.html
+++ b/v4/index.html
@@ -34,11 +34,11 @@
   </div>
 
   <div class="top-right">
+    <button id="btnMail" title="Nous contacter / Suggestions">✉️</button>
     <div>B.Barrois</div>
     <div id="version">version</div>
   </div>
 </header>
-
 
   <!-- ACTIONS HAUT DE PAGE -->
   <div class="top-actions">
