--- a/v4/index.html
+++ b/v4/index.html
@@ -241,6 +241,16 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
+<script>
+document.getElementById("btnMail")?.addEventListener("click", () => {
+  window.open(
+    "https://forms.gle/XXXXXXXXXXXX",
+    "_blank"
+  );
+});
+</script>
+
+
 
 </body>
 </html>
