--- a/v4/index.html
+++ b/v4/index.html
@@ -34,10 +34,13 @@
   </div>
 
   <div class="top-right">
-    <button id="btnMail" title="Nous contacter / Suggestions">✉️</button>
-    <div>B.Barrois</div>
+    <div class="top-right-line">
+      <button id="btnMail" title="Nous contacter / Suggestions">✉️</button>
+      <span class="author">B.Barrois</span>
+    </div>
     <div id="version">version</div>
   </div>
+
 </header>
 
   <!-- ACTIONS HAUT DE PAGE -->
