--- a/v4/index.html
+++ b/v4/index.html
@@ -34,12 +34,14 @@
   </div>
 
   <div class="top-right">
-    <div class="top-right-line">
+    <div class="author">B.Barrois</div>
+  
+    <div class="top-right-sub">
       <button id="btnMail" title="Nous contacter / Suggestions">✉️</button>
-      <span class="author">B.Barrois</span>
+      <span id="version">version</span>
     </div>
-    <div id="version">version</div>
   </div>
+
 
 </header>
 
