--- a/v4/index.html
+++ b/v4/index.html
@@ -264,6 +264,12 @@ document.addEventListener("DOMContentLoaded", () => {
       document.getElementById("helpOverlay")?.remove();
     };
   });
+  document.getElementById("btnFeedbackHelp").onclick = () => {
+  window.open(
+    "https://forms.gle/XXXXXXXXXXXX",
+    "_blank"
+  );
+};
 
 });
 </script>
