--- a/v5/index.html
+++ b/v5/index.html
@@ -314,7 +314,7 @@ function openLocChoice(observations) {
     savePendingObservations(observations);
     sendPendingObservations();
     closeLocChoice();
-    window.location.href =   "https://potameche.fngta.fr/carte_partagee/";
+    window.location.href =   "https://potameche.fngta.fr/app.js";
   };
 
   document.getElementById("locCancel").onclick = closeLocChoice;
