--- a/v5/index.html
+++ b/v5/index.html
@@ -294,7 +294,7 @@ function openLocChoice(observations) {
       <!-- 🌐 Carte partagée (ouverture navigateur) -->
       <a
         id="locShared"
-        href="https://potameche.fngta.fr/app.html"
+        href="https://berny70.github.io/Chrono_Frelon/map.html"
         target="_blank"
         rel="noopener"
         class="btn-link"
