--- a/v5/map.html
+++ b/v5/map.html
@@ -38,6 +38,9 @@
 <body>
 
 <div id="map"></div>
+  
+<button id="btnBack" class="btn-back">⬅ Retour</button>
+<div id="map"></div>
 
 <div class="legend">
   <b>Chrono Frelon – V3</b><br>
