--- a/v5/map.html
+++ b/v5/map.html
@@ -22,6 +22,20 @@
       width: 100vw;
     }
 
+    .btn-back {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 1000;
+      background: white;
+      border: 1px solid #ccc;
+      padding: 6px 10px;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    }
+
     .legend {
       position: absolute;
       bottom: 10px;
@@ -37,20 +51,30 @@
 
 <body>
 
-<div id="map"></div>
-  
+<!-- Bouton retour -->
 <button id="btnBack" class="btn-back">⬅ Retour</button>
+
+<!-- Carte -->
 <div id="map"></div>
 
+<!-- Légende -->
 <div class="legend">
-  <b>Chrono Frelon – V3</b><br>
+  <b>Chrono Frelon – Carte locale</b><br>
   Points d’observation et directions
 </div>
 
 <!-- Leaflet -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
+<!-- Carte locale -->
 <script src="./map.js"></script>
+
+<!-- Action bouton retour -->
+<script>
+document.getElementById("btnBack").addEventListener("click", () => {
+  window.location.href = "./index.html";
+});
+</script>
 
 </body>
 </html>
