--- a/v5/map.html
+++ b/v5/map.html
@@ -62,7 +62,7 @@
 <body>
 
 <!-- Bouton retour -->
-<button id="btnBack" class="btn-back">
+<button id="btnBack" class="btn-back" title="Retour à l'écran principal">
   ⬅ Retour aux chronos
 </button>
 
