--- a/v7/map.html
+++ b/v7/map.html
@@ -36,11 +36,12 @@
 </head>
 
 <body>
+<button id="btnBackMap">⬅ Retour</button>
 
 <div id="map"></div>
 
 <div class="legend">
-  <b>Chrono Frelon – V3</b><br>
+  <b>Chrono Frelon – V7</b><br>
   Points d’observation et directions
 </div>
 
