--- a/v7/map.html
+++ b/v7/map.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-<button id="btnBackMap">⬅ Retour</button>
+<button id="btnBackMap" title="Retour">⬅</button>
 
 <div id="map"></div>
 
