--- a/v4/index.html
+++ b/v4/index.html
@@ -33,9 +33,14 @@
   </div>
 
   <div class="top-right">
-    <div>B. Barrois</div>
-    <div id="version">version</div>
+    <div class="author">B. Barrois</div>
+  
+    <div class="meta">
+      <span class="contact-icon" title="Contact">✉️</span>
+      <span id="version">v.: 4.x</span>
+    </div>
   </div>
+
 </header>
 
 <!-- ==========================
