--- a/v4/index.html
+++ b/v4/index.html
@@ -35,9 +35,9 @@
   <div class="top-right">
     <div class="author">B. Barrois</div>
   
-    <div class="meta">
-      <span class="contact-icon" title="Contact">✉️</span>
-      <span id="version">v.: 4.x</span>
+    <div class="top-right-sub">
+      <button id="btnMail" title="Contact">✉️</button>
+      <div id="version">v.: 4.x</div>
     </div>
   </div>
 
