--- a/v4/map.html
+++ b/v4/map.html
@@ -48,6 +48,8 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script src="./map.js"></script>
+  
+<button id="btnBackMap">⟵ Retour</button>
 
 </body>
 </html>
