--- a/v4/index.html
+++ b/v4/index.html
@@ -137,7 +137,11 @@
 <!-- ==========================
      APP V6
 ========================== -->
-<script type="module" src="./app.js"></script>
+<script src="./version.js"></script>
+
+<script type="module">
+  import "./app.js?v=" + (window.APP_VERSION || "dev");
+</script>
 
 <!-- ==========================
      SERVICE WORKER
