--- a/v4/index.html
+++ b/v4/index.html
@@ -137,12 +137,9 @@
 <!-- ==========================
      APP V6
 ========================== -->
-<script src="./version.js"></script>
 
-<script type="module">
-  const v = window.APP_VERSION || "dev";
-  import("./app.js?v=" + v);
-</script>
+<script src="./version.js"></script>
+<script type="module" src="./app.js?v=4.8"></script>
 
 <!-- ==========================
      SERVICE WORKER
