--- a/v4/map.html
+++ b/v4/map.html
@@ -42,23 +42,23 @@
   /* ==========================
      BOUTON RETOUR
   ========================== */
-  #btnBackMap {
-    position: fixed;
-    top: 10px;
-    right: 10px;
+ #btnBackMap {
+  position: fixed;
+  top: 10px;
+  right: 10px;
 
-    background: #c62828;
-    color: white;
-    border: none;
-    border-radius: 20px;
+  z-index: 10000;
 
-    padding: 8px 14px;
-    font-size: 0.9em;
-    font-weight: bold;
+  background: #c00;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 10px 14px;
 
-    cursor: pointer;
-    z-index: 10001; /* 🔑 AU-DESSUS DE TOUT */
-  }
+  font-size: 1em;
+  cursor: pointer;
+}
+
 
   #btnBackMap:hover {
     opacity: 0.85;
