--- a/v7/index.html
+++ b/v7/index.html
@@ -25,7 +25,7 @@
 <header class="topbar">
   <div class="top-left">
     <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
-    <button id="btnHelp" class="btn-help">Aide</button>
+    <button onclick="openHelpPopup()">❓ Aide</button>
   </div>
 
   <div class="top-title">
@@ -172,6 +172,11 @@ document.getElementById("btnHelp").addEventListener("click", () => {
     navigator.serviceWorker.register("./service-worker.js");
   }
 </script>
+  <!-- ==========================
+     appel du HELP
+========================== -->
+  <script src="js/help.js"></script>
+
 
 </body>
 </html>
